1.12.2
- Widgets: Anzeige von Arts
- LiveTV: Option, um den Listeneintrag 'Aktualisieren' auszublenden
1.12.1
- "inputstream.adaptive" V2.2.27 ist erforderlich
- Property "inputstream.adaptive.license_flags=persistent_storage" gesetzt
1.12.0
- Aktivieren des Python-Cachings
1.11.0
- Vorbereitende Änderung für Python-Caching
1.10.10.2
- Fix für die Anzeige der TMDb-Poster
1.10.10.1
- Fix Unicode Error
1.10.10
- LiveTV
  - Item zum Aktualisieren der Liste
  - Liste wird nicht mehr gecachet
  - Überarbeitung der Titelanzeige
  - Bugfix für die Anzeige von TMDb-Inhalten
  - Anzeige von Start- und Endezeiten
1.10.9
- Fix Encoding
- Option zum Leeren des Caches
1.10.8
- Fix für das Herunterladen von der "widevine lib" unter 64-bit Kodi
- Anzeige vom Verfügbarkeitsdatum
1.10.7
- Hinzufügen von Thumbs zu den Listitems
- Abhängigkeit zu "inputstream adaptive" und "inputstreamhelper"
- Mediathek aus Sportsektion entfernt
1.10.6
- Unterstützung für "Staffelstarts"
1.10.5
- Anzeige von Streaminfos
- Hinzufügen von Episoden einer Staffel zur Merkliste
1.10.4
- Berücksichtigung der FSK-Angaben bei Streamstart
1.10.3
- Fix für Jugendschutzeinstellung
1.10.2
- Fix für Log-Warnhinweise
1.10.1
- Bugfix für Suche, wenn zusätzliche Medieninformation aktiviert sind
1.10.0
- Passwortverschlüsselung
1.9.9
- Infolabels als URL-Parameter
1.9.8
- LiveTV: Sportsender zeigen wieder Livestream; Anzeige aller verfügbaren Sportsender
1.9.7
- Hinweis eingebaut, dass die User-Ratings und Poster von TMDb bezogen werden.
- Smoothstream Addon entfernt
1.9.6
- Um Trefferwahrscheinlichkeit auf TMDB zu erhöhen, wird - sofern vorhanden - zunächst nach dem Titel inkl. Releasejahr gesucht und erst wenn kein Result kommt (weil Sky die falsche Info gibt), so wird ohne der Titel nochmal ohne Jahr gesucht + Error Handling verbessert
- Anzeige Live-TV Übersicht verbessert
1.9.5
- Anzeige von allen Bundesliga- und Sport-Optionskanälen
- TMDb-Poster für Cinema-Kanäle (LiveTV) nutzen
1.9.4