@@ -34,14 +34,7 @@ This product uses the TMDb API (themoviedb.org) but is not endorsed or certified
 		<website></website>
 		<email></email>
 		<source></source>
-		<broken>Aufgrund der Abschaltung der Browser-Variante seitens SKY, ist das Add-on vorerst nicht mehr funktionsfähig.</broken>
 		<news>
-V1.12.3
-- Aufgrund der Abschaltung der Browser-Variante seitens SKY, ist das Add-on vorerst nicht mehr funktionsfähig.
-V1.12.2
-- Widgets: Anzeige von Arts
-- LiveTV: Option, um den Listeneintrag 'Aktualisieren' auszublenden
-V1.12.1
 - "inputstream.adaptive" V2.2.27 ist erforderlich
 - Property "inputstream.adaptive.license_flags=persistent_storage" gesetzt
 		</news>
